fixed compose button covering discard draft

--- a/styles/main.less
+++ b/styles/main.less
@@ -176,6 +176,9 @@ body.platform-win32{
 	    border-radius: 15px !important;
 			cursor:pointer !important;
 	}
+	.draft{
+		padding-bottom: 90px;
+	}
 }
 
 body.is-blurred .search-bar .menu .header-container input {
